syntax = "proto3";

package subscriptions;

option java_package = "com.getlipa.eventstore.subscriptions";

import "common.proto";
import "google/protobuf/timestamp.proto";

message CheckpointReached {
  int64 position = 1;
}

message ProcessingStarted {
  int64 position = 1;
}

message ProcessingFinished {
  int64 position = 1;
}

message Event {
  common.Payload payload = 1;
  bytes id = 2;
  int64 position = 3;
  int64 seriesIndex = 4;
  bytes seriesType = 5;
  bytes seriesId = 6;
  bytes causationId = 7;
  bytes correlationId = 8;
  google.protobuf.Timestamp createdAt = 9;
}